Done Login with GG And FB

--- a/Backend_API/appsettings.json
+++ b/Backend_API/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=QuanLyBenhVienDB;Username=postgres;Password=123456"
   },
+  "Jwt": {
+    "Issuer": "QuanLyBenhVienAPI",
+    "Audience": "QuanLyBenhVienClient",
+    "Key": "Khueqp123456789098765432123456789098776",
+   
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
