--- a/QuanLyBenhvien/appsettings.json
+++ b/QuanLyBenhvien/appsettings.json
@@ -1,12 +1,25 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-QuanLyBenhvien-6dea0e71-fd65-4d0c-aa63-0810e6d4d36b;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Authentication": { //Dùng User Secrets để lưu trữ thông tin nhạy cảm nên làm sao mà có ở đây được :)
+    "Facebook": {
+      "AppId": "",
+      "AppSecret": ""
+    },
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
+
+  },
+  "AllowedHosts": "*",
+  "BackendApiUrl": "https://localhost:7023/",
+  "ReCaptcha": {
+    "SiteKey": "6LfUJA0rAAAAAM38DTruJsQbc_L0o9SGt-HmFirx",
+    "SecretKey": "6LfUJA0rAAAAAFYBS_2Ps4W8xA3RY2RphDgKuBjy"
+  }
 }
