--- a/QuanLyBenhvien/appsettings.json
+++ b/QuanLyBenhvien/appsettings.json
@@ -19,7 +19,7 @@
   "AllowedHosts": "*",
   "BackendApiUrl": "https://localhost:7023/",
   "ReCaptcha": {
-    "SiteKey": "6LfUJA0rAAAAAM38DTruJsQbc_L0o9SGt-HmFirx",
-    "SecretKey": "6LfUJA0rAAAAAFYBS_2Ps4W8xA3RY2RphDgKuBjy"
+    "SiteKey": "",
+    "SecretKey": ""
   }
 }
