Xong đăng nhập đăng ký

--- a/QuanLyBenhvien/appsettings.json
+++ b/QuanLyBenhvien/appsettings.json
@@ -13,7 +13,13 @@
     "Google": {
       "ClientId": "",
       "ClientSecret": ""
-    }
+    },
+
+
+      "EmailSettings": {
+        "SenderEmail": "khuenm.22810310322@epu.edu.vn",
+        "AppPassword": "vonvhmovlvvxpllf"
+      }
 
   },
   "AllowedHosts": "*",
