--- a/QuanLyBenhvien/appsettings.Development.json
+++ b/QuanLyBenhvien/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+"BackendApiUrl": "https://localhost:7023/",
+ "EmailSettings": {
+   "SenderEmail": "khuenm.22810310322@epu.edu.vn",
+   "AppPassword": "vonvhmovlvvxpllf"
+ }
 }
